<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:padding="5dp">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="@string/login"-->
        <!--android:textSize="30sp" />-->

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:hint="Enter login"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/loginContainer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="@string/password"-->
        <!--android:textSize="30sp" />-->

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:hint="Enter password"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/passContainer"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/new_account"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_now"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in" />

</RelativeLayout>